adds webpack demos and fixes some hrefs

--- a/index.html
+++ b/index.html
@@ -75,10 +75,21 @@
             <section class="container" id="applications">
                 <h2 class="text-uppercase">Web Applications</h2>
                 <div class="row">
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile wow fadeInUp" data-wow-duration="0.3s">
+                            <h3 class="projectName">Webpack Demos</h3>
+                            <a href="https://github.com/thawkin3/webpack-demos" target="_blank"><img class="img-responsive" src="Images/Thumbnails/WebpackDemos.png" alt="Webpack Demos" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">Example demos for key features in Webpack, including various loaders and plugins.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> Webpack 4, Vanilla JavaScript, React.js</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/webpack-demos" target="_blank">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
                 	<div class="col-xs-6 col-sm-4">
                         <article class="tile wow fadeInUp" data-wow-duration="0.3s">
                             <h3 class="projectName">React Concepts Demo</h3>
-                            <a href="http://tylerhawkins.info/react-concepts-demo/build" target="_blank"><img class="img-responsive" src="Images/Thumbnails/ReactConceptsDemo.png" alt="React Concepts Demo" /></a>
+                            <a href="../react-concepts-demo/build" target="_blank"><img class="img-responsive" src="Images/Thumbnails/ReactConceptsDemo.png" alt="React Concepts Demo" /></a>
                             <div class="projectNotes">
                                 <p class="projectDescription">Example demos to illustrate different key pieces of React's functionality, including some of its newest features.</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> React.js, React Router</p>
@@ -100,7 +111,7 @@
                     <div class="col-xs-6 col-sm-4">
                         <article class="tile wow fadeInUp" data-wow-duration="0.3s">
                             <h3 class="projectName">JavaScript 30 Challenge</h3>
-                            <a href="http://tylerhawkins.info/javascript30" target="_blank"><img class="img-responsive" src="Images/Thumbnails/JavaScript30.png" alt="JavaScript 30" /></a>
+                            <a href="../javascript30/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/JavaScript30.png" alt="JavaScript 30" /></a>
                             <div class="projectNotes">
                                 <p class="projectDescription">30 JavaScript apps in 30 days.</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> Vanilla JavaScript</p>
@@ -199,7 +210,7 @@
                     <div class="col-xs-6 col-sm-4">
                         <article class="tile wow fadeInUp" data-wow-duration="0.3s">
                             <h3 class="projectName">Bubble Ball</h3>
-                            <a href="http://tylerhawkins.info/BubbleBall/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/BubbleBall.png" alt="Bubble Ball" /></a>
+                            <a href="../BubbleBall/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/BubbleBall.png" alt="Bubble Ball" /></a>
                             <div class="projectNotes">
                                 <p class="projectDescription">HTML5 game in which you must dodge all the incoming obstacles to stay alive.</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> Canvas element, requestAnimationFrame, Vanilla JavaScript</p>
@@ -210,7 +221,7 @@
                     <div class="col-xs-6 col-sm-4">
                         <article class="tile wow fadeInUp" data-wow-duration="0.3s">
                             <h3 class="projectName">Stacks on Stacks on Stacks</h3>
-                            <a href="http://tylerhawkins.info/stacks-on-stacks-on-stacks/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/StacksOnStacksOnStacks.png" alt="Stacks on Stacks on Stacks" /></a>
+                            <a href="../stacks-on-stacks-on-stacks/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/StacksOnStacksOnStacks.png" alt="Stacks on Stacks on Stacks" /></a>
                             <div class="projectNotes">
                                 <p class="projectDescription">HTML5 game in which you must jump on top of incoming platforms to make the tallest stack.</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> jQuery, CSS3 animations</p>
@@ -243,7 +254,7 @@
                     <div class="col-xs-6 col-sm-4">
                         <article class="tile wow fadeInUp" data-wow-duration="0.3s">
                             <h3 class="projectName">Markdown Previewer</h3>
-                            <a href="/markdownPreviewer/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/MarkdownPreviewer.png" alt="Markdown Previewer" /></a>
+                            <a href="../markdownPreviewer/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/MarkdownPreviewer.png" alt="Markdown Previewer" /></a>
                             <div class="projectNotes">
                                 <p class="projectDescription">App that allows you to write marked up content and see the output side by side.</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> React.js, Marked library</p>
@@ -254,7 +265,7 @@
                     <div class="col-xs-6 col-sm-4">
                         <article class="tile wow fadeInUp" data-wow-duration="0.3s">
                             <h3 class="projectName">Free Code Camp Leaderboard</h3>
-                            <a href="/freeCodeCampLeaderboard/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/FreeCodeCampLeaderboard.png" alt="Free Code Camp Leaderboard" /></a>
+                            <a href="../freeCodeCampLeaderboard/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/FreeCodeCampLeaderboard.png" alt="Free Code Camp Leaderboard" /></a>
                             <div class="projectNotes">
                                 <p class="projectDescription">Sortable/filterable table pulling in data from a webservice.</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> React.js, FreeCodeCamp API</p>
@@ -265,7 +276,7 @@
                     <div class="col-xs-6 col-sm-4">
                         <article class="tile wow fadeInUp" data-wow-duration="0.3s">
                             <h3 class="projectName">Recipe Box</h3>
-                            <a href="/recipeBox/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/RecipeBox.png" alt="Recipe Box" /></a>
+                            <a href="../recipeBox/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/RecipeBox.png" alt="Recipe Box" /></a>
                             <div class="projectNotes">
                                 <p class="projectDescription">App for storing your favorite recipes. CRUD API.</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> React.js, React Router, Local Storage</p>
@@ -276,7 +287,7 @@
                     <div class="col-xs-6 col-sm-4">
                         <article class="tile wow fadeInUp" data-wow-duration="0.3s">
                             <h3 class="projectName">Conway's Game of Life</h3>
-                            <a href="/gameOfLife/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/GameOfLife.png" alt="Conway's Game of Life" /></a>
+                            <a href="../gameOfLife/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/GameOfLife.png" alt="Conway's Game of Life" /></a>
                             <div class="projectNotes">
                                 <p class="projectDescription">Interactive Conway's Game of Life simulation.</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> React.js</p>
@@ -287,7 +298,7 @@
                     <div class="col-xs-6 col-sm-4">
                         <article class="tile wow fadeInUp" data-wow-duration="0.3s">
                             <h3 class="projectName">Dungeon Crawler</h3>
-                            <a href="/dungeonCrawler/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/DungeonCrawler.png" alt="Dungeon Crawler" /></a>
+                            <a href="../dungeonCrawler/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/DungeonCrawler.png" alt="Dungeon Crawler" /></a>
                             <div class="projectNotes">
                                 <p class="projectDescription">Battle enemies, find weapons, eat food, defeat the boss.</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> React.js</p>
@@ -309,7 +320,7 @@
                     <div class="col-xs-6 col-sm-4">
                         <article class="tile wow fadeInUp" data-wow-duration="0.3s">
                             <h3 class="projectName">Camera</h3>
-                            <a href="https://tylerhawkins.info/Camera/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Camera.png" alt="Camera" /></a>
+                            <a href="../Camera/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Camera.png" alt="Camera" /></a>
                             <div class="projectNotes">
                                 <p class="projectDescription">Desktop camera app that lets you take a picture and download it using the HTML5 getUserMedia API. (Note: HTTPS is required.)</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> jQuery, getUserMedia API</p>
