fixes api in utah weather apps

--- a/UtahWeather/index.html
+++ b/UtahWeather/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>Utah Weather</title>
 		<link href='//fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css' />
-		<link rel="stylesheet" type="text/css" href="style.css"/>
+		<link rel="stylesheet" type="text/css" href="style.css" />
 		<script src="//code.jquery.com/jquery-1.10.2.js"></script>
 		<script src="script.js"></script>
 	</head>
@@ -11,7 +11,7 @@
 		<h6>*Results may vary</h6>
 		<form>
 			<p id="instructions">Enter A Utah City: </p><input type="text" id="cityfield" autocomplete="off" value="">
-			<input id="button" type="submit" value="Submit">
+			<input id="button" type="submit" value="Submit" />
 			<br>
 			<br>
 			<p>Suggestions:</p> <span id="txtHint">Empty</span>
@@ -19,6 +19,6 @@
 		<p>City:</p>
 		<textarea id="dispcity" disabled="disabled">No City</textarea>
 		<p>Current Weather:</p>
-		<div id="weather">No weather</div>
+		<div id="weather">No weather data found</div>
 	</body>
 </html>
