--- a/UtahWeatherNode/public/index.html
+++ b/UtahWeatherNode/public/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>Utah Weather</title>
 		<link href='//fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css' />
-		<link rel="stylesheet" type="text/css" href="style.css"/>
+		<link rel="stylesheet" type="text/css" href="style.css" />
 		<script src="//code.jquery.com/jquery-1.10.2.js"></script>
 		<script src="script.js"></script>
 	</head>
@@ -15,11 +15,10 @@
 			<br>
 			<br>
 			<p>Suggestions:</p> <span id="txtHint">Empty</span>
-			
 		</form>
 		<br/>
 		<br/>
 		<p>Current Weather in <span id="dispcity">[enter a city above]</span>:</p>
-		<div id="weather">No weather</div>
+		<div id="weather">No weather data found</div>
 	</body>
 </html>
