--- a/JSCalculator/index.html
+++ b/JSCalculator/index.html
@@ -4,7 +4,7 @@
 		<title>JS Calculator</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<link rel="stylesheet" type="text/css" href="style.css" />
-		<link href='//fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+		<link href='//fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css' />
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="script.js"></script>
 	</head>
