adds accessible focus indicators to all links

--- a/index.html
+++ b/index.html
@@ -516,9 +516,9 @@
             </section>
 
             <div class="separator">
-                <a href="#applications"><img src="Images/up.png" alt="Scroll up to previous section" /></a>
-                <a href="#home"><img src="Images/home.png" alt="Scroll to top of page" /></a>
-                <a href="#microservices"><img src="Images/down.png" alt="Scroll down to next section" /></a>
+                <a class="scroll-link" href="#applications"><img src="Images/up.png" alt="Scroll up to previous section" /></a>
+                <a class="scroll-link" href="#home"><img src="Images/home.png" alt="Scroll to top of page" /></a>
+                <a class="scroll-link" href="#microservices"><img src="Images/down.png" alt="Scroll down to next section" /></a>
             </div>
 
             <section class="container" id="webDesign">
@@ -743,9 +743,9 @@
             </section>
 
             <div class="separator">
-                <a href="#webDesign"><img src="Images/up.png" alt="Scroll up to previous section" /></a>
-                <a href="#home"><img src="Images/home.png" alt="Scroll to top of page" /></a>
-                <a href="#dataVisualizations"><img src="Images/down.png" alt="Scroll down to next section" /></a>
+                <a class="scroll-link" href="#webDesign"><img src="Images/up.png" alt="Scroll up to previous section" /></a>
+                <a class="scroll-link" href="#home"><img src="Images/home.png" alt="Scroll to top of page" /></a>
+                <a class="scroll-link" href="#dataVisualizations"><img src="Images/down.png" alt="Scroll down to next section" /></a>
             </div>
 
             <section class="container" id="microservices">
@@ -826,9 +826,9 @@
             </section>
 
             <div class="separator">
-                <a href="#microservices"><img src="Images/up.png" alt="Scroll up to previous section" /></a>
-                <a href="#home"><img src="Images/home.png" alt="Scroll to top of page" /></a>
-                <a href="#games"><img src="Images/down.png" alt="Scroll down to next section" /></a>
+                <a class="scroll-link" href="#microservices"><img src="Images/up.png" alt="Scroll up to previous section" /></a>
+                <a class="scroll-link" href="#home"><img src="Images/home.png" alt="Scroll to top of page" /></a>
+                <a class="scroll-link" href="#games"><img src="Images/down.png" alt="Scroll down to next section" /></a>
             </div>
 
             <section class="container" id="dataVisualizations">
@@ -897,9 +897,9 @@
             </section>
 
             <div class="separator">
-                <a href="#dataVisualizations"><img src="Images/up.png" alt="Scroll up to previous section" /></a>
-                <a href="#home"><img src="Images/home.png" alt="Scroll to top of page" /></a>
-                <a href="#about"><img src="Images/down.png" alt="Scroll down to next section" /></a>
+                <a class="scroll-link" href="#dataVisualizations"><img src="Images/up.png" alt="Scroll up to previous section" /></a>
+                <a class="scroll-link" href="#home"><img src="Images/home.png" alt="Scroll to top of page" /></a>
+                <a class="scroll-link" href="#about"><img src="Images/down.png" alt="Scroll down to next section" /></a>
             </div>
 
             <section class="container" id="games">
@@ -1050,9 +1050,9 @@
             </section>
 
             <div class="separator">
-                <a href="#games"><img src="Images/up.png" alt="Scroll up to previous section" /></a>
-                <a href="#home"><img src="Images/home.png" alt="Scroll to top of page" /></a>
-                <a href="#skills"><img src="Images/down.png" alt="Scroll down to next section" /></a>
+                <a class="scroll-link" href="#games"><img src="Images/up.png" alt="Scroll up to previous section" /></a>
+                <a class="scroll-link" href="#home"><img src="Images/home.png" alt="Scroll to top of page" /></a>
+                <a class="scroll-link" href="#skills"><img src="Images/down.png" alt="Scroll down to next section" /></a>
             </div>
 
             <section class="container" id="about">
@@ -1067,9 +1067,9 @@
             </section>
 
             <div class="separator">
-                <a href="#about"><img src="Images/up.png" alt="Scroll up to previous section" /></a>
-                <a href="#home"><img src="Images/home.png" alt="Scroll to top of page" /></a>
-                <a href="#work"><img src="Images/down.png" alt="Scroll down to next section" /></a>
+                <a class="scroll-link" href="#about"><img src="Images/up.png" alt="Scroll up to previous section" /></a>
+                <a class="scroll-link" href="#home"><img src="Images/home.png" alt="Scroll to top of page" /></a>
+                <a class="scroll-link" href="#work"><img src="Images/down.png" alt="Scroll down to next section" /></a>
             </div>
 
             <section class="container" id="skills">
@@ -1085,8 +1085,8 @@
             </section>
 
             <div class="separator">
-                <a href="#skills"><img src="Images/up.png" alt="Scroll up to previous section" /></a>
-                <a href="#home"><img src="Images/home.png" alt="Scroll to top of page" /></a>
+                <a class="scroll-link" href="#skills"><img src="Images/up.png" alt="Scroll up to previous section" /></a>
+                <a class="scroll-link" href="#home"><img src="Images/home.png" alt="Scroll to top of page" /></a>
             </div>
 
             <section class="container" id="work">
