updates the Hard Skills section info

--- a/index.html
+++ b/index.html
@@ -1076,7 +1076,9 @@
                 <h2 class="text-uppercase">Skills</h2>
                 <h3 id="hard" class="text-uppercase">Hard Skills</h3>
                 <div class="row">
-                    <p>I'm most fluent in the MEAN/MERN stack (MongoDB, Express, AngularJS, React.js, Node.js) and love to develop full stack applications. I also have experience working with PHP and MySQL back-ends to create RESTful API services. I prefer to work with the latest and greatest front-end JavaScript frameworks, but I'm also well-versed in vanilla JavaScript and jQuery. I'm also an AWS Certified Developer Associate.</p>
+                    <p>I'm most fluent in JavaScript and React.js with a strong emphasis on web accessibility and testing. More generally speaking, I enjoy the MEAN/MERN stack (MongoDB, Express, AngularJS, React.js, Node.js) and love to develop full stack applications.</p>
+                    <p>I also have experience working with PHP and MySQL back-ends to create RESTful API services. I prefer to work with the latest and greatest front-end JavaScript frameworks, but I'm also well-versed in vanilla JavaScript and jQuery. I'm also an AWS Certified Developer Associate.</p>
+                    <p>Technical writing is one of my hobbies, and I've written several articles, tutorials, and blog posts on software engineering topics.</p>
                 </div>
                 <h3 id="soft" class="text-uppercase">Soft Skills</h3>
                 <div class="row" id="softRow">
