chore: updates page metadata

--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta charset="UTF-8">
-        <meta name="description" content="Tyler Hawkins is an expert UI Developer specializing in React and AngularJS with the MEAN/MERN stack. Check out some of his side projects here!">
-        <meta name="keywords" content="web portfolio, hire me, web developer, UI developer, software engineer, React, AngularJS, MEAN, MERN, JavaScript, HTML5, CSS3">
+        <meta name="description" content="I'm a senior software engineer specializing in the MERN/MEAN stack. Check out some of my projects here!">
+        <meta name="keywords" content="web portfolio, hire me, web developer, UI developer, software engineer, senior software engineer, frontend, React, AngularJS, MEAN, MERN, JavaScript, HTML, HTML5, CSS, CSS3, a11y, accessibility">
         <meta name="author" content="Tyler Hawkins">
         <!-- Google+ -->
         <meta itemprop="name" content="Tyler Hawkins - Web Portfolio">
-        <meta itemprop="description" content="Tyler Hawkins is an expert UI Developer specializing in React and AngularJS with the MEAN/MERN stack. Check out some of his side projects here!">
+        <meta itemprop="description" content="I'm a senior software engineer specializing in the MERN/MEAN stack. Check out some of my projects here!">
         <meta itemprop="image" content="http://tylerhawkins.info/201R/Images/Profile.jpeg">
         <!-- Twitter -->
         <meta name="twitter:title" content="Tyler Hawkins - Web Portfolio">
-        <meta name="twitter:description" content="Tyler Hawkins is an expert UI Developer specializing in React and AngularJS with the MEAN/MERN stack. Check out some of his side projects here!">
+        <meta name="twitter:description" content="I'm a senior software engineer specializing in the MERN/MEAN stack. Check out some of my projects here!">
         <meta name="twitter:image:src" content="http://tylerhawkins.info/201R/Images/Profile.jpeg">
         <!-- Open Graph data -->
         <meta property="og:title" content="Tyler Hawkins - Web Portfolio" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="http://tylerhawkins.info/201R/" />
         <meta property="og:image" content="http://tylerhawkins.info/201R/Images/Profile.jpeg" />
-        <meta property="og:description" content="Tyler Hawkins is an expert UI Developer specializing in React and AngularJS with the MEAN/MERN stack. Check out some of his side projects here!" />
+        <meta property="og:description" content="I'm a senior software engineer specializing in the MERN/MEAN stack. Check out some of my projects here!" />
         <meta property="og:site_name" content="Tyler Hawkins - Web Portfolio" />
         <!-- CSS -->
         <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
