feat: adds better navigation aria-labels and updates Skills section

--- a/index.html
+++ b/index.html
@@ -611,9 +611,9 @@
             </section>
 
             <div class="separator">
-                <a class="scroll-link" href="#applications"><img src="Images/up.png" alt="Scroll up to previous section" /></a>
+                <a class="scroll-link" href="#applications"><img src="Images/up.png" alt="Scroll up to previous section (Web Applications)" /></a>
                 <a class="scroll-link" href="#home"><img src="Images/home.png" alt="Scroll to top of page" /></a>
-                <a class="scroll-link" href="#microservices"><img src="Images/down.png" alt="Scroll down to next section" /></a>
+                <a class="scroll-link" href="#microservices"><img src="Images/down.png" alt="Scroll down to next section (Microservices)" /></a>
             </div>
 
             <section class="container" id="webDesign">
@@ -838,9 +838,9 @@
             </section>
 
             <div class="separator">
-                <a class="scroll-link" href="#webDesign"><img src="Images/up.png" alt="Scroll up to previous section" /></a>
+                <a class="scroll-link" href="#webDesign"><img src="Images/up.png" alt="Scroll up to previous section (Website Designs)" /></a>
                 <a class="scroll-link" href="#home"><img src="Images/home.png" alt="Scroll to top of page" /></a>
-                <a class="scroll-link" href="#dataVisualizations"><img src="Images/down.png" alt="Scroll down to next section" /></a>
+                <a class="scroll-link" href="#dataVisualizations"><img src="Images/down.png" alt="Scroll down to next section (Data Visualizations)" /></a>
             </div>
 
             <section class="container" id="microservices">
@@ -921,9 +921,9 @@
             </section>
 
             <div class="separator">
-                <a class="scroll-link" href="#microservices"><img src="Images/up.png" alt="Scroll up to previous section" /></a>
+                <a class="scroll-link" href="#microservices"><img src="Images/up.png" alt="Scroll up to previous section (Microservices)" /></a>
                 <a class="scroll-link" href="#home"><img src="Images/home.png" alt="Scroll to top of page" /></a>
-                <a class="scroll-link" href="#games"><img src="Images/down.png" alt="Scroll down to next section" /></a>
+                <a class="scroll-link" href="#games"><img src="Images/down.png" alt="Scroll down to next section (Games)" /></a>
             </div>
 
             <section class="container" id="dataVisualizations">
@@ -992,9 +992,9 @@
             </section>
 
             <div class="separator">
-                <a class="scroll-link" href="#dataVisualizations"><img src="Images/up.png" alt="Scroll up to previous section" /></a>
+                <a class="scroll-link" href="#dataVisualizations"><img src="Images/up.png" alt="Scroll up to previous section (Data Visualizations)" /></a>
                 <a class="scroll-link" href="#home"><img src="Images/home.png" alt="Scroll to top of page" /></a>
-                <a class="scroll-link" href="#about"><img src="Images/down.png" alt="Scroll down to next section" /></a>
+                <a class="scroll-link" href="#about"><img src="Images/down.png" alt="Scroll down to next section (About)" /></a>
             </div>
 
             <section class="container" id="games">
@@ -1145,9 +1145,9 @@
             </section>
 
             <div class="separator">
-                <a class="scroll-link" href="#games"><img src="Images/up.png" alt="Scroll up to previous section" /></a>
+                <a class="scroll-link" href="#games"><img src="Images/up.png" alt="Scroll up to previous section (Games)" /></a>
                 <a class="scroll-link" href="#home"><img src="Images/home.png" alt="Scroll to top of page" /></a>
-                <a class="scroll-link" href="#skills"><img src="Images/down.png" alt="Scroll down to next section" /></a>
+                <a class="scroll-link" href="#skills"><img src="Images/down.png" alt="Scroll down to next section (Skills)" /></a>
             </div>
 
             <section class="container" id="about">
@@ -1163,27 +1163,23 @@
             </section>
 
             <div class="separator">
-                <a class="scroll-link" href="#about"><img src="Images/up.png" alt="Scroll up to previous section" /></a>
+                <a class="scroll-link" href="#about"><img src="Images/up.png" alt="Scroll up to previous section (About)" /></a>
                 <a class="scroll-link" href="#home"><img src="Images/home.png" alt="Scroll to top of page" /></a>
-                <a class="scroll-link" href="#work"><img src="Images/down.png" alt="Scroll down to next section" /></a>
+                <a class="scroll-link" href="#work"><img src="Images/down.png" alt="Scroll down to next section (Work Experience)" /></a>
             </div>
 
             <section class="container" id="skills">
                 <h2 class="text-uppercase">Skills</h2>
-                <h3 id="hard" class="text-uppercase">Hard Skills</h3>
                 <div class="row">
-                    <p>I'm most fluent in JavaScript and React.js with a strong emphasis on web accessibility and testing. More generally speaking, I enjoy the MEAN/MERN stack (MongoDB, Express, AngularJS, React.js, Node.js) and love to develop full stack applications.</p>
-                    <p>I also have experience working with PHP and MySQL back-ends to create RESTful API services. I prefer to work with the latest and greatest front-end JavaScript frameworks, but I'm also well-versed in vanilla JavaScript and jQuery. I'm also an AWS Certified Developer Associate.</p>
-                    <p>Technical writing is one of my hobbies, and I've written several articles, tutorials, and blog posts on software engineering topics.</p>
-                </div>
-                <h3 id="soft" class="text-uppercase">Soft Skills</h3>
-                <div class="row" id="softRow">
-                    <p>I'm a driven, self-motivated, lifelong learner. I'm always reading something new or watching online courses to further expand my skillset. I'm dependable, a great communicator with both technical and non-technical people, can meet and beat project timelines, and am a team player. I love to provide thought leadership and mentor others.</p>
+                    <p>My main areas of expertise are <b>JavaScript (ES6+)</b>, <b>React</b>, <b>HTML5</b>, and <b>CSS3</b>. <b>Unit testing</b> is extremely important to me. In the React ecosystem, I typically use <b>Jest</b> with <b>React Testing Library</b> to write my tests. I’m passionate about <b>web accessibility</b>, am well-versed in the WCAG docs, and always write code that meets the <b>WCAG 2.1 AA</b> success criteria. I also have experience building <b>design systems</b> and working with the <b>developer tooling</b> involved in maintaining a repo.</p>
+                    <p>I love to write/blog and have written over 50 articles with nearly a half million page views on Medium, Dev.to, Hacker Noon, DZone, and freeCodeCamp. I frequently present in company-wide engineering trainings and conferences. Teaching, presenting, and mentoring are things that energize me.</p>
+                    <p>I enjoy contributing to open-source software and have made commits in several repos: storybook, preact-www, single-spa, front-end-interview-handbook, focus-trap-react, focus-trap, and tabbable.</p>
+                    <p>Other technologies I’ve used are: Babel, Webpack, Rollup, TypeScript, Redux, Node.js, Express, MongoDB, GraphQL, Storybook, jQuery, AngularJS (1.x), PHP, Java, SQL, Git, and JIRA. I'm also an AWS Certified Developer Associate.</p>
                 </div>
             </section>
 
             <div class="separator">
-                <a class="scroll-link" href="#skills"><img src="Images/up.png" alt="Scroll up to previous section" /></a>
+                <a class="scroll-link" href="#skills"><img src="Images/up.png" alt="Scroll up to previous section (Skills)" /></a>
                 <a class="scroll-link" href="#home"><img src="Images/home.png" alt="Scroll to top of page" /></a>
             </div>
 
