feat: updates writing experience, job positions, and copyright year

--- a/index.html
+++ b/index.html
@@ -1172,7 +1172,7 @@
                 <h2 class="text-uppercase">Skills</h2>
                 <div class="row">
                     <p>My main areas of expertise are <b>JavaScript (ES6+)</b>, <b>React</b>, <b>HTML5</b>, and <b>CSS3</b>. <b>Unit testing</b> is extremely important to me. In the React ecosystem, I typically use <b>Jest</b> with <b>React Testing Library</b> to write my tests. I’m passionate about <b>web accessibility</b>, am well-versed in the WCAG docs, and always write code that meets the <b>WCAG 2.1 AA</b> success criteria. I also have experience building <b>design systems</b> and working with the <b>developer tooling</b> involved in maintaining a repo.</p>
-                    <p>I love to write/blog and have written over 50 articles with nearly a half million page views on Medium, Dev.to, Hacker Noon, DZone, and freeCodeCamp. I frequently present in company-wide engineering trainings and conferences. Teaching, presenting, and mentoring are things that energize me.</p>
+                    <p>I love to write/blog and have written over 80 articles with over one million page views on Medium, Dev.to, Hacker Noon, DZone, and freeCodeCamp. I frequently present in company-wide engineering trainings and conferences. Teaching, presenting, and mentoring are things that energize me.</p>
                     <p>I enjoy contributing to open-source software and have made commits in several repos: storybook, preact-www, single-spa, front-end-interview-handbook, focus-trap-react, focus-trap, and tabbable.</p>
                     <p>Other technologies I’ve used are: Babel, Webpack, Rollup, TypeScript, Redux, Node.js, Express, MongoDB, GraphQL, Storybook, jQuery, AngularJS (1.x), PHP, Java, SQL, Git, and JIRA. I'm also an AWS Certified Developer Associate.</p>
                 </div>
@@ -1186,12 +1186,12 @@
             <section class="container" id="work">
                 <h2 class="text-uppercase">Work Experience</h2>
                 <div class="row">
-                    <h3 class="job-title text-uppercase">Senior Software Engineer</h3>
+                    <h3 class="job-title text-uppercase">Senior Software Engineer, Tech Lead</h3>
                     <p>Adobe</p>
                     <p>February 2021 - present</p>
                 </div>
                 <div class="row">
-                    <h3 class="job-title text-uppercase">Senior Software Engineer</h3>
+                    <h3 class="job-title text-uppercase">Senior Software Engineer, Tech Lead</h3>
                     <p>Workfront</p>
                     <p>March 2020 - February 2021</p>
                 </div>
@@ -1201,7 +1201,7 @@
                     <p>February 2020 - March 2020</p>
                 </div>
                 <div class="row">
-                    <h3 class="job-title text-uppercase">Software Engineer</h3>
+                    <h3 class="job-title text-uppercase">Software Engineer, Tech Lead</h3>
                     <p>Instructure</p>
                     <p>February 2019 - February 2020</p>
                 </div>
@@ -1239,7 +1239,7 @@
         <footer class="container">
             <div class="footer">
                 <p>Hand-coded by Tyler Hawkins</p>
-                <p>&copy; 2014-2021</p>
+                <p>&copy; 2014-2022</p>
             </div>
         </footer>
     </body>
